--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "invoicer",
   "version": "0.1.0",
   "private": true,
+  "devDependencies": {
+    "@rushstack/eslint-config": "^2.5.1",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "prettier": "^2.5.1"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
