--- a/package.json
+++ b/package.json
@@ -10,21 +10,25 @@
   },
   "dependencies": {
     "@craco/craco": "^6.4.3",
+    "@date-io/dayjs": "^2.13.1",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@hookform/resolvers": "^2.8.8",
     "@jackfranklin/test-data-bot": "^1.4.0",
     "@mui/icons-material": "^5.4.1",
+    "@mui/lab": "^5.0.0-alpha.68",
     "@mui/material": "^5.4.1",
     "@react-pdf/renderer": "^2.1.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@types/axios": "^0.14.0",
     "@types/jest": "^27.4.0",
     "@types/node": "^16.11.24",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "assert": "^2.0.0",
+    "axios": "^0.26.0",
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
     "dayjs": "^1.10.7",
@@ -32,7 +36,10 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.27.0",
+    "react-location": "^3.3.4",
+    "react-query": "^3.34.15",
     "react-scripts": "5.0.0",
+    "react-use": "^17.3.2",
     "stream-browserify": "^3.0.0",
     "typescript": "^4.5.5",
     "util": "^0.12.4",
