--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "web-vitals": "^2.1.4",
     "zod": "^3.11.6",
     "zustand": "^3.7.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-intl": "^5.24.8"
   },
   "scripts": {
     "start": "craco start",
